--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "fstream": "^1.0.12",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "stream": "0.0.2",
+    "tar": "^6.1.0",
+    "zlib": "^1.0.5"
   }
 }
